--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -183,5 +183,8 @@
     <color name="text_color_kickout_text">#ff709f</color>
 
     <color name="text_color_chat_list">#ffffff</color>
+    <color name="translucent">#aaffffff</color>
+    <color name="text_host_name">#010101</color>
+    <color name="line">#EDEDED</color>
 
 </resources>
