--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -430,22 +430,23 @@
                     android:layout_marginTop="9dp"
                     android:layout_marginRight="7dp" >
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="26dp"
-                        android:layout_alignParentTop="true"
-                        android:background="@drawable/bg_chat_top_translate" />
+
                 </com.youth.banner.Banner>
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/vp_activity"
-                    android:layout_width="61dp"
-                    android:layout_height="108dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_below="@id/banner"
                     android:layout_alignParentRight="true"
                     android:layout_marginTop="5dp"
-                    android:visibility="gone" />
-
+                    android:layout_marginRight="7dp"
+                    android:visibility="visible" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="26dp"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/bg_chat_top_translate" />
             </RelativeLayout>
         </LinearLayout>
 
