--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -48,8 +48,8 @@
                             android:layout_width="50dp"
                             android:layout_height="13dp"
                             android:layout_marginLeft="6dp"
-                            android:layout_marginTop="3dp"
                             android:layout_marginRight="6dp"
+                            android:layout_marginTop="3dp"
                             android:textSize="11sp" />
 
 
@@ -58,10 +58,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
-                            android:layout_marginLeft="6dp"
-                            android:layout_marginTop="6.5dp"
-                            android:layout_marginRight="6dp"
                             android:layout_marginBottom="2dp"
+                            android:layout_marginLeft="6dp"
+                            android:layout_marginRight="6dp"
+                            android:layout_marginTop="6.5dp"
                             android:singleLine="true"
                             android:textColor="@color/white"
                             android:textSize="10sp" />
@@ -131,8 +131,8 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/shape_live_display_contribution_btn_bg"
                     android:drawableLeft="@drawable/live_display_cup"
-                    android:drawableRight="@drawable/live_display_arrow"
                     android:drawablePadding="6dp"
+                    android:drawableRight="@drawable/live_display_arrow"
                     android:gravity="center"
                     android:paddingLeft="9dp"
                     android:paddingRight="9dp"
@@ -183,8 +183,8 @@
                         android:id="@+id/tv_run_way_gift"
                         android:layout_width="1000dp"
                         android:layout_height="20dp"
-                        android:layout_marginLeft="5dp"
                         android:layout_marginBottom="2dp"
+                        android:layout_marginLeft="5dp"
                         android:gravity="center_vertical"
                         android:singleLine="true"
                         android:textSize="12sp" />
@@ -223,8 +223,8 @@
                         android:id="@+id/rl_other_side"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:visibility="gone"
-                        android:layout_weight="1">
+                        android:layout_weight="1"
+                        android:visibility="gone">
 
                         <com.ksyun.media.player.KSYTextureView
                             android:id="@+id/texture_view2"
@@ -244,21 +244,21 @@
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:layout_centerVertical="true"
-                                android:src="@color/white"/>
+                                android:src="@color/white" />
 
                             <TextView
                                 android:id="@+id/tv_other_side"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="@color/white"
-                                android:textSize="10sp"
-                                android:singleLine="true"
-                                android:maxEms="5"
-                                android:ellipsize="end"
                                 android:layout_centerInParent="true"
                                 android:layout_marginLeft="8dp"
                                 android:layout_marginRight="8dp"
-                                android:layout_toRightOf="@id/circle_other_side"/>
+                                android:layout_toRightOf="@id/circle_other_side"
+                                android:ellipsize="end"
+                                android:maxEms="5"
+                                android:singleLine="true"
+                                android:textColor="@color/white"
+                                android:textSize="10sp" />
                         </RelativeLayout>
                     </RelativeLayout>
 
@@ -315,7 +315,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
                 <android.support.design.widget.CoordinatorLayout
                     android:layout_width="match_parent"
@@ -330,10 +330,10 @@
                         android:layout_alignParentBottom="true"
                         android:background="#702d2933"
                         android:gravity="center_vertical"
-                        android:paddingLeft="7dp"
-                        android:paddingTop="2dp"
-                        android:paddingRight="7dp"
                         android:paddingBottom="3dp"
+                        android:paddingLeft="7dp"
+                        android:paddingRight="7dp"
+                        android:paddingTop="2dp"
                         android:singleLine="true"
                         android:textSize="12sp"
                         android:visibility="gone" />
@@ -353,7 +353,7 @@
                     android:id="@+id/iv_count_down"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"/>
+                    android:layout_centerInParent="true" />
 
                 <LinearLayout
                     android:id="@+id/ll_enter"
@@ -375,10 +375,10 @@
                         android:id="@+id/cl_entenr"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:paddingBottom="4dp"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:paddingTop="3dp"
-                        android:paddingBottom="4dp">
+                        android:paddingTop="3dp">
 
                         <com.whzl.mengbi.ui.widget.view.RoyalEnterView
                             android:id="@+id/tv_enter"
@@ -427,8 +427,8 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginTop="9dp"
-                    android:layout_marginRight="7dp" >
+                    android:layout_marginRight="7dp"
+                    android:layout_marginTop="9dp">
 
 
                 </com.youth.banner.Banner>
@@ -437,11 +437,13 @@
                     android:id="@+id/vp_activity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_below="@id/banner"
                     android:layout_alignParentRight="true"
-                    android:layout_marginTop="5dp"
+                    android:layout_below="@id/banner"
                     android:layout_marginRight="7dp"
+                    android:layout_marginTop="5dp"
+                    android:overScrollMode="never"
                     android:visibility="visible" />
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="26dp"
@@ -481,10 +483,10 @@
                 android:id="@+id/view_message_notify"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
-                android:layout_alignTop="@id/btn_chat_private"
                 android:layout_alignRight="@id/btn_chat_private"
-                android:layout_marginTop="2dp"
+                android:layout_alignTop="@id/btn_chat_private"
                 android:layout_marginRight="2dp"
+                android:layout_marginTop="2dp"
                 android:background="@drawable/shape_red_notify"
                 android:visibility="gone" />
 
@@ -552,10 +554,10 @@
         android:id="@+id/rl_treasure_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="12dp"
-        android:layout_marginBottom="50dp">
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginRight="12dp">
 
         <ImageButton
             android:id="@+id/btn_treasure_box"
@@ -570,8 +572,8 @@
             android:layout_width="11dp"
             android:layout_height="11dp"
             android:layout_alignRight="@id/btn_treasure_box"
-            android:layout_marginTop="4dp"
             android:layout_marginRight="4dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/shape_red_notify"
             android:gravity="center"
             android:text="1"
