--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -444,6 +444,19 @@
                     android:overScrollMode="never"
                     android:visibility="visible" />
 
+                <LinearLayout
+                    android:id="@+id/ll_pager_index"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@id/vp_activity"
+                    android:layout_marginRight="7dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="26dp"
