--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -38,7 +38,7 @@
             <ImageView
                 android:id="@+id/iv_level_icon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="13dp"
                 android:layout_marginLeft="5dp"
                 android:layout_toRightOf="@id/tv_nick_name" />
 
