--- a/app/src/main/res/layout/activity_anchor_card.xml
+++ b/app/src/main/res/layout/activity_anchor_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,16 +9,21 @@
     <RelativeLayout
         android:layout_width="289dp"
         android:layout_height="384dp"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:background="@drawable/shape_share_rect">
+
+        <RelativeLayout
+            android:id="@+id/rl_share_card"
+            android:layout_width="match_parent"
+            android:layout_height="293dp">
 
         <com.whzl.mengbi.ui.widget.view.RoundImageView
             android:id="@+id/iv_host_cover"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:layout_marginBottom="150dp"
+            android:layout_height="250dp"
+            android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
-            android:layout_alignParentTop="true" />
+            android:scaleType="fitXY" />
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,7 +33,7 @@
             <RelativeLayout
                 android:id="@+id/relativeLayout"
                 android:layout_width="match_parent"
-                android:layout_height="157dp"
+                android:layout_height="64dp"
                 android:background="@drawable/shape_share_rect"
                 app:layout_constraintBottom_toBottomOf="parent">
 
@@ -64,108 +70,6 @@
                     android:textColor="@color/text_view"
                     android:textSize="10sp" />
 
-                <LinearLayout
-                    android:id="@+id/ll_share"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_alignParentBottom="true">
-
-                    <TextView
-                        android:id="@+id/tv_weixin_circle"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawableTop="@drawable/ic_card_weixin_circle"
-                        android:drawablePadding="7dp"
-                        android:gravity="center"
-                        android:text="@string/weixin_circle"
-                        android:textColor="@color/text_view"
-                        android:textSize="8sp" />
-
-                    <TextView
-                        android:id="@+id/tv_weixin_friend"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawableTop="@drawable/ic_card_weixin"
-                        android:drawablePadding="7dp"
-                        android:gravity="center"
-                        android:text="@string/weixin_friend"
-                        android:textColor="@color/text_view"
-                        android:textSize="8sp" />
-
-                    <TextView
-                        android:id="@+id/tv_weibo"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawableTop="@drawable/ic_card_weibo"
-                        android:drawablePadding="7dp"
-                        android:gravity="center"
-                        android:text="@string/weibo"
-                        android:textColor="@color/text_view"
-                        android:textSize="8sp" />
-
-                    <TextView
-                        android:id="@+id/tv_qq"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawableTop="@drawable/ic_card_qq"
-                        android:drawablePadding="7dp"
-                        android:gravity="center"
-                        android:text="@string/qq"
-                        android:textColor="@color/text_view"
-                        android:textSize="8sp" />
-
-                    <TextView
-                        android:id="@+id/tv_qq_zone"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawableTop="@drawable/ic_card_zone"
-                        android:drawablePadding="7dp"
-                        android:gravity="center"
-                        android:text="@string/zone"
-                        android:textColor="@color/text_view"
-                        android:textSize="8sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@id/ll_share"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="15dp"
-                    android:orientation="horizontal">
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="11dp"
-                        android:layout_marginRight="22dp"
-                        android:layout_weight="1"
-                        android:background="@color/line" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="@string/share_card_title"
-                        android:textColor="@color/text_view"
-                        android:textSize="11sp" />
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="22dp"
-                        android:layout_marginRight="11dp"
-                        android:layout_weight="1"
-                        android:background="@color/line" />
-                </LinearLayout>
-
 
             </RelativeLayout>
 
@@ -198,7 +102,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
+            <com.whzl.mengbi.ui.widget.view.RoundImageView
                 android:id="@+id/iv_qr_code"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
@@ -209,7 +113,7 @@
                 android:layout_marginRight="8dp"
                 android:background="@drawable/shape_dialog_update_bg"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.906"
+                app:layout_constraintHorizontal_bias="0.938"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -217,7 +121,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginRight="33dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="13dp"
                 android:text="@string/long_press"
                 android:textColor="@color/text_host_name"
                 android:textSize="7sp"
@@ -225,6 +130,111 @@
                 app:layout_constraintTop_toBottomOf="@+id/iv_qr_code" />
 
         </android.support.constraint.ConstraintLayout>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/ll_share"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/rl_share_card"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="11dp"
+                android:layout_marginRight="22dp"
+                android:layout_weight="1"
+                android:background="@color/line" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/share_card_title"
+                android:textColor="@color/text_view"
+                android:textSize="11sp" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="22dp"
+                android:layout_marginRight="11dp"
+                android:layout_weight="1"
+                android:background="@color/line" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_share"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true">
+
+            <TextView
+                android:id="@+id/tv_weixin_circle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_card_weixin_circle"
+                android:drawablePadding="7dp"
+                android:gravity="center"
+                android:text="@string/weixin_circle"
+                android:textColor="@color/text_view"
+                android:textSize="8sp" />
+
+            <TextView
+                android:id="@+id/tv_weixin_friend"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_card_weixin"
+                android:drawablePadding="7dp"
+                android:gravity="center"
+                android:text="@string/weixin_friend"
+                android:textColor="@color/text_view"
+                android:textSize="8sp" />
+
+            <TextView
+                android:id="@+id/tv_weibo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_card_weibo"
+                android:drawablePadding="7dp"
+                android:gravity="center"
+                android:text="@string/weibo"
+                android:textColor="@color/text_view"
+                android:textSize="8sp" />
+
+            <TextView
+                android:id="@+id/tv_qq"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_card_qq"
+                android:drawablePadding="7dp"
+                android:gravity="center"
+                android:text="@string/qq"
+                android:textColor="@color/text_view"
+                android:textSize="8sp" />
+
+            <TextView
+                android:id="@+id/tv_qq_zone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_card_zone"
+                android:drawablePadding="7dp"
+                android:gravity="center"
+                android:text="@string/zone"
+                android:textColor="@color/text_view"
+                android:textSize="8sp" />
+        </LinearLayout>
 
     </RelativeLayout>
 </RelativeLayout>
