--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -547,7 +547,7 @@
                 android:background="@null"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_live_free_gift"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <ImageButton
                 android:id="@+id/btn_send_gift"
