--- a/app/src/main/res/layout/activity_buy_succubus.xml
+++ b/app/src/main/res/layout/activity_buy_succubus.xml
@@ -33,7 +33,8 @@
             android:layout_marginRight="16dp"
             android:text="妖姬卡专属特权"
             android:textColor="#ffffff"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
