--- a/app/src/main/res/layout/activity_buy_vip.xml
+++ b/app/src/main/res/layout/activity_buy_vip.xml
@@ -14,11 +14,11 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="43dp"
+            android:layout_height="43dp"
             android:layout_marginBottom="9dp"
             android:layout_marginTop="23dp"
-            android:src="@drawable/ic_vip_vip" />
+            android:src="@drawable/ic_vip" />
     </LinearLayout>
 
     <LinearLayout
