--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -42,8 +42,7 @@
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_below="@id/btn_back"
-                        android:layout_centerHorizontal="true"
-                        android:background="@color/white" />
+                        android:layout_centerHorizontal="true" />
 
                     <TextView
                         android:id="@+id/tv_nick_name"
@@ -73,12 +72,13 @@
                     <LinearLayout
                         android:id="@+id/ll_level_container"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="18dp"
                         android:layout_below="@id/tv_sign"
                         android:layout_centerHorizontal="true"
                         android:orientation="horizontal" />
 
                     <TextView
+                        android:id="@+id/tv_live_state"
                         android:layout_width="63dp"
                         android:layout_height="25dp"
                         android:layout_alignParentLeft="true"
@@ -87,9 +87,11 @@
                         android:gravity="center"
                         android:text="休息中"
                         android:textColor="@color/white"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:visibility="gone"/>
 
                     <TextView
+                        android:id="@+id/tv_follow_state"
                         android:layout_width="63dp"
                         android:layout_height="25dp"
                         android:layout_alignParentRight="true"
@@ -100,7 +102,8 @@
                         android:paddingLeft="12dp"
                         android:text="关注"
                         android:textColor="@color/text_yellow"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:visibility="gone"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -113,21 +116,26 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="" />
+                            android:textColor="@color/white"
+                            android:textSize="12sp"
+                            android:gravity="center" />
 
                         <TextView
                             android:id="@+id/tv_fans_count"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:textColor="@color/white"
+                            android:textSize="12sp"
                             android:gravity="center" />
 
                         <TextView
-                            android:id="@+id/tv_attention"
+                            android:id="@+id/tv_follow"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
+                            android:textColor="@color/white"
+                            android:textSize="12sp"
                             android:gravity="center" />
                     </LinearLayout>
                 </RelativeLayout>
@@ -166,7 +174,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
-                    android:text="123123"
                     android:textColor="@color/text_view"
                     android:textSize="12sp" />
             </LinearLayout>
@@ -188,11 +195,11 @@
                     android:textSize="12sp" />
 
                 <TextView
+                    android:id="@+id/tv_user_id"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="15dp"
-                    android:text="123123"
                     android:textColor="@color/text_view"
                     android:textSize="12sp" />
 
@@ -231,9 +238,9 @@
                     android:layout_marginLeft="15dp"
                     android:background="@drawable/shape_round_rect_blue"
                     android:gravity="center"
-                    android:text="123123"
                     android:textColor="@color/text_blue"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/tv_age"
@@ -242,9 +249,9 @@
                     android:layout_marginLeft="10dp"
                     android:background="@drawable/shape_round_rect_green"
                     android:gravity="center"
-                    android:text="123123"
                     android:textColor="@color/text_green"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/tv_constellation"
@@ -253,9 +260,9 @@
                     android:layout_marginLeft="10dp"
                     android:background="@drawable/shape_round_rect_purple"
                     android:gravity="center"
-                    android:text="123123"
                     android:textColor="@color/text_purple"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
             </LinearLayout>
 
             <!-- 主播等级 -->
